change endpoint names to proper ones
